Fri Dec 12 05:24:56 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/jms/compat/src/META-INF/service/opendds-ir-ds.xml:
        * java/jms/compat/test/org/opendds/jms/AbstractMessageImplTest.java:
        * java/jms/compat/test/org/opendds/jms/MessageConsumerImplTest.java:
        * java/jms/compat/test/org/opendds/jms/MessageProducerImplTest.java:
        * java/jms/compat/test/org/opendds/jms/SessionImplTest.java:

          Package refactorings.
        
        * java/jms/compat/src/META-INF/service/opendds-inforepo-ds.xml:
        * java/jms/compat/test/org/opendds/jms/client/AbstractMessageImplTest.java:
        * java/jms/compat/test/org/opendds/jms/client/MessageConsumerImplTest.java:
        * java/jms/compat/test/org/opendds/jms/client/MessageProducerImplTest.java:
        * java/jms/compat/test/org/opendds/jms/client/SessionImplTest.java:

          Removed these files.

Fri Dec 12 00:46:41 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/OpenDDS.ipr:
        * java/jms/compat/test/org/opendds/jms/client/MessageConsumerImplTest.java:
        * java/jms/src/org/opendds/jms/DataWriterPair.java:
        * java/jms/src/org/opendds/jms/MessageConsumerImpl.java:
        * java/jms/src/org/opendds/jms/MessageProducerImpl.java:
        * java/jms/src/org/opendds/jms/qos/QosPolicies.java:

          More fixes to tests. Corrected default QoS behavior in
          MessageConsumerImpl and MessageProducerImpl.

Thu Dec 11 23:16:48 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/OpenDDS.ipr:
        * java/jms/compat/src/META-INF/service/opendds-inforepo-ds.xml:
        * java/jms/compat/test/org/opendds/jms/client/MessageConsumerImplTest.java:
        * java/jms/src/org/opendds/jms/ConnectionImpl.java:
        * java/jms/src/org/opendds/jms/TopicImpl.java:
        * java/jms/src/org/opendds/jms/common/lang/Objects.java:
        * java/jms/src/org/opendds/jms/common/util/Logger.java:
